生图任务发送代码开发完成
